@@ -2,6 +2,11 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-04-05 Kimmo
+ PATCH: [ 1460749 ] Print relative paths to patch files
+  Src: DiffWrapper.cpp DiffWrapper.h MainFrm.cpp MergeDoc.cpp PatchDlg.h
+   PatchTool.cpp PatchTool.h
+
 2006-04-05 Takashi
  BUG: [ 1458714 ] [Replace All] doesn't work
   Src/editlib: ceditreplacedlg.cpp
